# linkedin-fastmcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
examples/: claude_desktop_config.example.json  docker_mcp.json.example  opencode.json.example
src/linkedin_fastmcp/: __init__.py  __main__.py  cli.py  config.py  errors.py  linkedin_client.py  mcp_oauth.py  oauth.py  oauth_callback.py  schemas.py  server.py  token_store.py
src/linkedin_fastmcp/tools/: __init__.py  api.py  auth.py  comments.py  events.py  media.py  organizations.py  posts.py  profile.py  reactions.py
tests/: test_config.py  test_events.py  test_linkedin_client.py  test_mcp_oauth.py  test_media.py  test_oauth.py  test_schemas.py  test_token_store.py
