[project]
name = "linkedin-fastmcp"
version = "0.1.0"
description = "MCP server for LinkedIn REST APIs -- posts, comments, reactions, images, events, and more."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Raj Dudhare", email = "rajdudhare1@gmail.com" }
]
license = "MIT"
keywords = ["linkedin", "mcp", "fastmcp", "model-context-protocol", "oauth", "linkedin-api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
linkedin-fastmcp = "linkedin_fastmcp.cli:main"

[project.urls]
Homepage = "https://github.com/rajdudhare1/linkedin-fastmcp"
Repository = "https://github.com/rajdudhare1/linkedin-fastmcp"
Issues = "https://github.com/rajdudhare1/linkedin-fastmcp/issues"
Documentation = "https://github.com/rajdudhare1/linkedin-fastmcp#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_fastmcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
